1.3.8 (unreleased)

- Fix CI by updating .travis to use bionic and --become rather than --sudo.
  [smcmahon]

- Earlier buildout fix in this release introduced a typo that broke buildout operation under some conditions. Fixed.
  [smcmahon]

- Bump superlance to v1.0 to support Python 3
  [stevepiercy]

- Buildout would not be re-run even when the buildout template had changed.  Fixed.
  [fulv]

1.3.7 2019-07-21

- Make it possible to use Python 3 with Plone 5.2.
  Allow plone_python_version to be set generally or per plone server.
  Expand test.yml to include both 2.7 and 3 builds of Plone 5.2.
  [smcmahon]

1.3.6 2019-03-25

- Add Plone 5.2 to test suite.
  It's working with Python 2.7 for RC2-pending.
  [smcmahon]

- Do not specify the products folder in buildout config for Plone 5.2+.
  It's no longer supported.
  [smcmahon]

- By default, try to download a requirements.txt from dist.plone.org.
  If that doesn't work (e.g., for older Plone versions), fall back to our previous strategy of creating one from an included template.
  The requirements.txt is used via pip to prime the virtualenv prior to running buildout.
  [smcmahon]

- Default Plone version -> 5.1.4.
  [smcmahon]

- Update use of "apt" for Debian to avoid with_items, which has been deprecated for package handling.
  [smcmahon]

1.3.5 2018-09-25

- memmon's supervisor configuration failed if memmon wasn't on a particular path. Fixed.
  [smcmahon]

- 1.3.4's fix for configuration of tcpcheck port broke if client count wasn't specified in the individual config.
  Fixed.
  [smcmahon]

1.3.4 2018-09-24

- Fix tcpchecks in test.yml.
  [smcmahon]

- superlance was needlessly installed even if plone_hot_monitor was set to 'cron'.
  Harmless, but untidy.
  [smcmahon]

- Automated configuration of the tcp check port wasn't working for multiple plones.
  Deliberately specified ports on a plone-by-plone level was working.
  Fixed.

- Switch to platform virtualenv broke use of memmon in some environments. Fixed.