@@ -1,0 +1,3 @@
+This directory is for special-feature tests that can't be handled in the omnibus test.yml.
+
+These need to be run manually.
