@@ -1,5 +1,12 @@
 1.3.8 (unreleased)
 
+- Make it a little easier to use Vagrant to test against playbooks other than test.yml by
+  1) having the Vagrantfile not automatically provision with ansible; and
+  2) adding a couple of shell scripts to test against the default or all boxes.
+  Both shell scripts accept a test playbook filename; if none is given, runs against test.yml.
+  Note that Travis CI only tests ./test.yml.
+  [smcmahon]
+
 - Fix CI by updating .travis to use bionic and --become rather than --sudo.
   [smcmahon]
 
